# roger-buddy

./: .gitignore  CMakeLists.txt  TargetDestination.cpp  TargetDestination.hpp  app_icon.rc  main.cpp  main.hpp  mousePosition.cpp  mousePosition.hpp  readme.md  winMain.cpp
